--- a/plugin/packages.config
+++ b/plugin/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+
   <package id="AngleSharp" version="1.2.0" targetFramework="net462" />
-  <package id="HtmlAgilityPack" version="1.11.54" targetFramework="net462" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.3" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="8.0.0-preview.7.23375.6" targetFramework="net462" />
-  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
+  <package id="HtmlAgilityPack" version="1.11.33" targetFramework="net462" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.0" targetFramework="net462" />
+  <package id="Microsoft.Win32.Primitives" version="5.0.0" targetFramework="net462" />
+  <package id="NETStandard.Library" version="2.1.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
-  <package id="SoundCloudExplode" version="1.6.5" targetFramework="net462" />
+  <package id="SoundCloudExplode" version="1.6.6" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
